--- a/index.html
+++ b/index.html
@@ -23,66 +23,20 @@
     </nav>
     <div class="container">
         <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input id="icon_prefix" type="text" class="validate">
-                        <label for="icon_prefix">Nombre</label>
+            <div class="col s12 m7">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/sample-1.jpg">
+                        <span class="card-title">RAMA HOME</span>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="apellidos" type="text" class="validate">
-                        <label for="apellidos">Apellidos</label>
+                    <div class="card-content">
+                        <p>Esto pertenece a la rama HOME, de git.</p>
                     </div>
-                </div>
-                <div class="row">
-
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">phone</i>
-                        <input id="icon_telephone" type="tel" class="validate">
-                        <label for="icon_telephone">Telephone</label>
-                    </div>
-
-                </div>
-
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Contraseña</label>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">mode_edit</i>
-                        <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                        <label for="icon_prefix2">Mensaje</label>
-                    </div>
-                </div>
-
-                <div class="file-field input-field">
-                    <div class="btn">
-                        <span>File</span>
-                        <input type="file" multiple>
-                    </div>
-                    <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text" placeholder="Upload one or more files">
-                    </div>
-                </div>
-
-                <p>
-                    <label>
-                        <input type="checkbox" />
-                        <span>Acepta Termino de Registro</span>
-                    </label>
-                </p>
-            </form>
+            </div>
         </div>
 
     </div>
